--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "watch": "npx tailwindcss -i ./src/input.css -o ./dist/output.css --watch"
+    "watch-css": "npx tailwindcss -i ./src/input.css -o ./dist/output.css --watch",
+    "watch-js": "tsc -w"
   },
   "author": "",
   "license": "ISC",
