--- a/package.json
+++ b/package.json
@@ -4,13 +4,15 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "npx eleventy --serve",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "watch-css": "npx tailwindcss -i ./src/input.css -o ./dist/output.css --watch",
+    "watch-css": "npx tailwindcss -i ./assets/css/input.css -o ./dist/output.css --watch",
     "watch-js": "tsc -w"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@11ty/eleventy": "^2.0.0",
     "tailwindcss": "^3.2.7"
   }
 }
