--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "npx eleventy --serve",
     "test": "echo \"Error: no test specified\" && exit 1",
     "watch-css": "npx tailwindcss -i ./assets/css/input.css -o ./dist/output.css --watch",
-    "watch-js": "tsc -w"
+    "watch-js": "tsc -w",
+    "build": "eleventy"
   },
   "author": "",
   "license": "ISC",
